@@ -1,5 +1,5 @@
 Package: mirt
-Version: 1.9.8
+Version: 1.9.9
 Date: 2014-04-23
 Type: Package
 Title: Multidimensional Item Response Theory
